# vega

./: .dockerignore  .gitignore  .gitlab-ci.yml  .travis.yml  Analysis_8h_source.html  AsterModel_8h_source.html  AsterRunner_8h_source.html  AsterWriter_8h_source.html  BoundaryCondition_8h_source.html  CMakeLists.txt  COPYRIGHT  CTestConfig.cmake  ConfigurationParameters_8h_source.html  Constraint_8h_source.html  CoordinateSystem_8h_source.html  Dockerfile  Dockerfile_centos7  Dockerfile_gitlab  Dockerfile_jenkins  Dockerfile_xcentos7  Dockerfile_xcompile  Dockerfile_xgitlab  Dof_8h_source.html  Doxyfile  Doxyfile.in  Element_8h_source.html  Jenkinsfile  Loading_8h_source.html  Material_8h_source.html  MeshComponents_8h_source.html  Mesh_8h_source.html  Model_8h_source.html  NastranParser_8h_source.html  NastranRunner_8h_source.html  NastranTokenizer_8h_source.html  NastranWriter_8h_source.html  Object_8h_source.html  Objective_8h_source.html  OptistructParser_8h_source.html  README.md  (+416 more)
Abstract/: Analysis.cpp  Analysis.h  BoundaryCondition.cpp  BoundaryCondition.h  CMakeLists.txt  ConfigurationParameters.cpp  ConfigurationParameters.h  Constraint.cpp  Constraint.h  CoordinateSystem.cpp  CoordinateSystem.h  Dof.cpp  Dof.h  Element.cpp  Element.h  Loading.cpp  Loading.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshComponents.cpp  MeshComponents.h  Model.cpp  Model.h  Object.h  Objective.cpp  Objective.h  Reference.h  SolverInterfaces.cpp  SolverInterfaces.h  Target.cpp  Target.h  Utility.cpp  Utility.h  Value.cpp  Value.h  build_properties.h.in  test_bar1n_model.med
Aster/: AsterFacade.cpp  AsterFacade.h  AsterModel.cpp  AsterModel.h  AsterRunner.cpp  AsterRunner.h  AsterWriter.cpp  AsterWriter.h  CMakeLists.txt  MedWriter.cpp  MedWriter.h
Commandline/: CMakeLists.txt  VegaCommandLine.cpp  VegaCommandLine.h  vegamain.cpp
Debug/: makefile  objects.mk  sources.mk
Debug/Abstract/: Analysis.d  BoundaryCondition.d  ConfigurationParameters.d  Constraint.d  CoordinateSystem.d  Dof.d  Element.d  Loading.d  Material.d  Mesh.d  MeshComponents.d  Model.d  Objective.d  SolverInterfaces.d  Utility.d  Value.d  subdir.mk
Debug/Aster/: AsterFacade.d  AsterModel.d  AsterRunner.d  AsterWriter.d  subdir.mk
Debug/Commandline/: VegaCommandLine.d  subdir.mk  vegamain.d
Debug/Nastran/: NastranFacade.d  NastranParser.d  NastranParser_geometry.d  NastranRunner.d  NastranTokenizer.d  NastranWriter.d  subdir.mk
Debug/ResultReaders/: CSVResultReader.d  F06Parser.d  ResultReadersFacade.d  subdir.mk
Debug/Systus/: SystusModel.d  SystusRunner.d  SystusWriter.d  subdir.mk
Debug/Test/Abstract/: CoordinateSystem_test.d  Dof_test.d  Element_test.d  Mesh_test.d  Model_test.d  Utility_test.d  subdir.mk
Debug/Test/Commandline/: CommandLineUtils.d  Nastran2Aster_test.d  Nastran2Nastran_test.d  Nastran2Systus_test.d  subdir.mk
Debug/Test/Nastran/: NastranParser_test.d  NastranTokenizer_test.d  subdir.mk
Debug/Test/ResultReaders/: CSVResultReaderTest.d  F06Parser_test.d  subdir.mk
Nastran/: CMakeLists.txt  NastranFacade.cpp  NastranFacade.h  NastranParser.cpp  NastranParser.h  NastranParser_geometry.cpp  NastranParser_param.cpp  NastranRunner.cpp  NastranRunner.h  NastranTokenizer.cpp  NastranTokenizer.h  NastranWriter.cpp  NastranWriter.h
Optistruct/: CMakeLists.txt  OptistructParser.cpp  OptistructParser.h
ResultReaders/: CMakeLists.txt  CSVResultReader.cpp  CSVResultReader.h  F06Parser.cpp  F06Parser.h  ResultReadersFacade.cpp  ResultReadersFacade.h
Systus/: CMakeLists.txt  SystusAsc.cpp  SystusAsc.h  SystusDat.cpp  SystusModel.cpp  SystusModel.h  SystusRunner.cpp  SystusRunner.h  SystusWriter.cpp  SystusWriter.h
Test/: CMakeLists.txt  _update_tests.sh  update_tests.sh
Test/Abstract/: CMakeLists.txt  CoordinateSystem_test.cpp  Dof_test.cpp  Element_test.cpp  Mesh_test.cpp  Model_test.cpp  Model_test.h  Utility_test.cpp  Value_test.cpp
Test/Aster/: CMakeLists.txt  MedWriter_test.cpp
Test/Commandline/: CMakeLists.txt  CommandLineUtils.cpp  CommandLineUtils.h  IRTMiniRBS_test.cpp  Nastran2AsterLong_test.cpp  Nastran2Aster_test.cpp  Nastran2Nastran_test.cpp  Nastran2Systus_test.cpp  NastranCoverage_test.cpp  Optistruct2Aster_test.cpp  Optistruct2Nastran_test.cpp  Optistruct2Systus_test.cpp
Test/Nastran/: CMakeLists.txt  NastranCoverage_test.cpp  NastranParser_test.cpp  NastranTokenizer_test.cpp  NastranWriter_test.cpp
Test/NightlyTests/: CMakeLists.txt  README.TXT
Test/Optistruct/: CMakeLists.txt  OptistructParser_test.cpp
Test/ResultReaders/: CMakeLists.txt  CSVResultReaderTest.cpp  F06Parser_test.cpp
cmakemodules/: CTestConfig.cmake  FindLibunwind.cmake  MEDFileConfig.cmake  continous_linux.cmake  cygwin-toolchain.cmake  cygwin-toolchain54.cmake  nightly.cmake  nightly_win.cmake
docker/: Dockerfile_alpine  Dockerfile_centos7  Dockerfile_jenkins  Dockerfile_tianyi  Dockerfile_ubuntu14  Dockerfile_ubuntu18  Dockerfile_xgitlab
docker/dockerdata/: nastran
dockerdata/: util.py
testdata/nastran/alneos/rbar1mod/: rbar1mod.f06  readme.txt
testdata/nastran/alneos/rod1freeforce/: readme.txt  rod1freeforce.f06
testdata/nastran/alneos/test4a/: test4a.f06
testdata/nastran/caw/prob19/: prob19.f06
testdata/nastran/caw/prob24/: plate.bdf
testdata/nastran/caw/prob30c/: prob30c.f06
testdata/nastran/cnes/cyl_sol105/: __cyl_sol105__.f06  cyl_sol105.bdf  readme.txt
testdata/nastran/irt/2dof108/: 2dof108.bdf  2dof108.f06  __2dof108.f06__  readme.txt
testdata/nastran/irt/aero2728/: Bulk_DFEM.bdf  aero2728.nas  readme.txt
testdata/nastran/irt/allpload/: allpload.f06  (+1 more)
testdata/unitTest/nastranparser/: README.TXT  doubleload.nas  github_issue15.nas  github_issue22.nas  github_issue28.nas  multilineset.nas  pload4d.nas  rbar_massif.nas  set_examples.nas  set_in_subcase.nas  set_thru.nas  test1.nas  wrong_param.nas  wrong_param2.nas
testdata/unitTest/optistructparser/: contact.nas  contact2.nas  multilineset.nas  pbushrigid.nas  pload4.nas  rbe2.nas  twosubcases.nas
testdata/unitTest/resultReaders/: modal_disp.f06  stresses_hexa.f06  stresses_tetra.f06  tut01.csv
(+225 files in other folders)
